// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access gating Permissions: Approved Supplicators only Approved Supplicator can supplicate ASSET->USDC (ABI-verified) 1`] = `
Object {
  "pool": "0x24B3c7704709ed1491473F30393FFc93cFB0FC34",
  "reserves": Object {
    "asset": "100000000000000000000",
    "usdc": "100000000000000000000",
  },
}
`;

exports[`Access gating Permissions: Approved Supplicators only Approved Supplicator can supplicate ASSET->USDC (ABI-verified) 2`] = `151182`;

exports[`Access gating Permissions: Approved Supplicators only Approved Supplicator can supplicate ASSET->USDC (ABI-verified) 3`] = `
Object {
  "amountIn": "1000000000000000000",
  "amountOut": "990089207037554083",
  "amounts": Object {
    "assetOut": "0",
    "sumOut": "990089207037554083",
    "usdcOut": "990089207037554083",
  },
  "caller": "0x70997970C51812dc3A010C7d01b50e0d17dc79C8",
  "callerBalances": Object {
    "after": Object {
      "a": "998800000000000000",
      "u": "990089207037554083",
    },
    "before": Object {
      "a": "2000000000000000000",
      "u": "0",
    },
  },
  "direction": "ASSET->USDC",
  "gasUsed": "151182",
  "label": "Approved — ASSET->USDC outcome (Phase 0)",
  "minOut": "0",
  "pool": "0x24B3c7704709ed1491473F30393FFc93cFB0FC34",
  "reserves": Object {
    "after": Object {
      "a": "101001000000000000000",
      "u": "99009910792962445917",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
}
`;

exports[`Access gating Permissions: Approved Supplicators only Approved Supplicator can supplicate USDC->ASSET (ABI-verified) 1`] = `151171`;

exports[`Access gating Permissions: Approved Supplicators only Approved Supplicator can supplicate USDC->ASSET (ABI-verified) 2`] = `
Object {
  "amountIn": "1000000000000000000",
  "amountOut": "990089207037554083",
  "amounts": Object {
    "assetOut": "990089207037554083",
    "sumOut": "990089207037554083",
    "usdcOut": "0",
  },
  "caller": "0x70997970C51812dc3A010C7d01b50e0d17dc79C8",
  "callerBalances": Object {
    "after": Object {
      "a": "990089207037554083",
      "u": "998800000000000000",
    },
    "before": Object {
      "a": "0",
      "u": "2000000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "gasUsed": "151171",
  "label": "Approved — USDC->ASSET outcome (Phase 0)",
  "minOut": "0",
  "pool": "0x212fdfCfCC22db97DeB3AC3260414909282BB4EE",
  "reserves": Object {
    "after": Object {
      "a": "99009910792962445917",
      "u": "101001000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
}
`;

exports[`Access gating Permissions: Approved Supplicators only Approved toggling affects Router permission 1`] = `151172`;

exports[`Access gating Permissions: Approved Supplicators only Approved toggling affects Router permission 2`] = `
Object {
  "amountIn": "1000000000000000000",
  "amountOut": "990089207037554083",
  "amounts": Object {
    "assetOut": "0",
    "sumOut": "990089207037554083",
    "usdcOut": "990089207037554083",
  },
  "caller": "0x70997970C51812dc3A010C7d01b50e0d17dc79C8",
  "callerBalances": Object {
    "after": Object {
      "a": "998800000000000000",
      "u": "990089207037554083",
    },
    "before": Object {
      "a": "2000000000000000000",
      "u": "0",
    },
  },
  "direction": "ASSET->USDC",
  "gasUsed": "151172",
  "label": "Toggle — approved(other) allowed (Phase 0)",
  "minOut": "0",
  "pool": "0x281Fb8B2252B16dF27d29d00B41d274AF89990f8",
  "reserves": Object {
    "after": Object {
      "a": "101001000000000000000",
      "u": "99009910792962445917",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
}
`;
